--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "rtl/ic_frontends"]
 	path = rtl/ic_frontends
-	url = /home/markus/Code/git_repos/ic_frontends.git/
+	url = https://github.com/marqs85/ic_frontends.git
 [submodule "software/sys_controller/ic_drivers"]
 	path = software/sys_controller/ic_drivers
-	url = /home/markus/Code/git_repos/ic_drivers.git/
+	url = https://github.com/marqs85/ic_drivers.git
