--- a/board/de10-nano/DE10-Nano-vd_isl.qsf
+++ b/board/de10-nano/DE10-Nano-vd_isl.qsf
@@ -474,6 +474,8 @@ set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
 set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
 set_global_assignment -name QIP_FILE sys/synthesis/sys.qip
 set_global_assignment -name QIP_FILE ../../rtl_common/linebuf.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/char_array.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/char_rom.qip
 set_global_assignment -name QIP_FILE software/sys_controller/mem_init/meminit.qip
 set_global_assignment -name QIP_FILE rtl/pll.qip
 set_global_assignment -name SIP_FILE rtl/pll.sip
@@ -505,5 +507,6 @@ set_global_assignment -name ACTIVE_SERIAL_CLOCK FREQ_100MHZ
 
 
 set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
+
 
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
