--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,7 @@
-[submodule "rtl/ic_frontends"]
-	path = rtl_common/ic_frontends
-	url = https://github.com/marqs85/ic_frontends.git
-[submodule "software/sys_controller/ic_drivers"]
-	path = sw_common/sys_controller/ic_drivers
-	url = https://github.com/marqs85/ic_drivers.git
 [submodule "board/de10-nano/software/bootloader/u-boot-socfpga"]
 	path = board/de10-nano/software/bootloader/u-boot-socfpga
 	url = https://github.com/altera-opensource/u-boot-socfpga
+[submodule "ossc_pro"]
+	path = ossc_pro
+	url = git@github.com:marqs85/ossc_pro.git
+	branch = vip_test
