--- a/sw_common/sys_controller/Makefile
+++ b/sw_common/sys_controller/Makefile
@@ -38,13 +38,13 @@ ALT_LDFLAGS :=
 
 #------------------------------------------------------------------------------
 #                         The adjust-path macro
-# 
+#
 # If COMSPEC/ComSpec is defined, Make is launched from Windows through
 # Cygwin.  The adjust-path macro converts absolute windows paths into
 # unix style paths (Example: c:/dir -> /c/dir). This will ensture
 # paths are readable by GNU Make.
 #
-# If COMSPEC/ComSpec is not defined, Make is launched from linux, and no 
+# If COMSPEC/ComSpec is not defined, Make is launched from linux, and no
 # adjustment is necessary
 #
 #------------------------------------------------------------------------------
@@ -57,7 +57,7 @@ endif # COMSPEC
 
 ifdef COMSPEC # if Windows OS
 
-ifeq ($(MAKE_VERSION),3.81) 
+ifeq ($(MAKE_VERSION),3.81)
 #
 # adjust-path/adjust-path-mixed for Mingw Gnu Make on Windows
 #
@@ -69,10 +69,10 @@ ifeq ($(MAKE_VERSION),3.81)
 
 #
 # adjust-path
-#  - converts back slash characters into forward slashes 
+#  - converts back slash characters into forward slashes
 #  - if input arg ($1) is an empty string then return the empty string
 #  - if input arg ($1) does not contain the string ":/", then return input arg
-#  - using sed, convert mixed path [c:/...] into mingw path [/c/...] 
+#  - using sed, convert mixed path [c:/...] into mingw path [/c/...]
 define adjust-path
 $(strip \
 $(if $1,\
@@ -83,13 +83,13 @@ endef
 
 #
 # adjust-path-mixed
-#  - converts back slash characters into forward slashes 
+#  - converts back slash characters into forward slashes
 #  - if input arg ($1) is an empty string then return the empty string
-#  - if input arg ($1) does not begin with a forward slash '/' char, then 
+#  - if input arg ($1) does not begin with a forward slash '/' char, then
 #    return input arg
-#  - using sed, convert mingw path [/c/...] or cygwin path [/c/cygdrive/...] 
-#    into a mixed path [c:/...] 
-define adjust-path-mixed 
+#  - using sed, convert mingw path [/c/...] or cygwin path [/c/cygdrive/...]
+#    into a mixed path [c:/...]
+define adjust-path-mixed
 $(strip \
 $(if $1,\
 $(if $(findstring $(subst \,/,$1),$(patsubst /%,%,$(subst \,/,$1))),\
@@ -97,7 +97,7 @@ $(subst \,/,$1),\
 $(shell echo $(subst \,/,$1) | sed -e 's,^/cygdrive/\([a-zA-Z]\)/,\1:/,' -e 's,^/\([a-zA-Z]\)/,\1:/,'))))
 endef
 
-else # MAKE_VERSION != 3.81 (MAKE_VERSION == 3.80 or MAKE_VERSION == 3.79) 
+else # MAKE_VERSION != 3.81 (MAKE_VERSION == 3.80 or MAKE_VERSION == 3.79)
 #
 #  adjust-path for Cygwin Gnu Make
 # $(call adjust-path,c:/aaa/bbb) = /cygdrive/c/aaa/bbb
@@ -123,26 +123,26 @@ endif # COMSPEC
 ACTIVE_BUILD_CONFIG := default
 BUILD_CONFIGS := default
 
-# The following TYPE comment allows tools to identify the 'type' of target this 
-# makefile is associated with. 
+# The following TYPE comment allows tools to identify the 'type' of target this
+# makefile is associated with.
 # TYPE: APP_MAKEFILE
 
-# This following VERSION comment indicates the version of the tool used to 
-# generate this makefile. A makefile variable is provided for VERSION as well. 
+# This following VERSION comment indicates the version of the tool used to
+# generate this makefile. A makefile variable is provided for VERSION as well.
 # ACDS_VERSION: 16.1
 ACDS_VERSION := 16.1
 
-# This following BUILD_NUMBER comment indicates the build number of the tool 
-# used to generate this makefile. 
+# This following BUILD_NUMBER comment indicates the build number of the tool
+# used to generate this makefile.
 # BUILD_NUMBER: 196
 
-# Define path to the application ELF. 
-# It may be used by the makefile fragments so is defined before including them. 
-# 
+# Define path to the application ELF.
+# It may be used by the makefile fragments so is defined before including them.
+#
 ELF := sys_controller.elf
 
 # Paths to C, C++, and assembly source files.
-C_SRCS += ../../../../sw_common/sys_controller/src/sys_controller.c
+C_SRCS += ../../../../sw_common/sys_controller/sys_controller.c
 C_SRCS += ../../../../sw_common/sys_controller/src/video_modes.c
 C_SRCS += ../../../../sw_common/sys_controller/src/avconfig.c
 C_SRCS += ../../../../sw_common/sys_controller/src/menu.c
@@ -192,8 +192,7 @@ SYS_LIB :=
 BSP_ROOT_DIR := ../sys_controller_bsp/
 
 # List of application specific include directories, library directories and library names
-APP_INCLUDE_DIRS += ./
-APP_INCLUDE_DIRS += inc
+APP_INCLUDE_DIRS += config
 APP_INCLUDE_DIRS += ../../../../sw_common/sys_controller/inc
 APP_INCLUDE_DIRS += ../../../../sw_common/sys_controller/ic_drivers/common
 APP_INCLUDE_DIRS += ../../../../sw_common/sys_controller/ic_drivers/si5351
@@ -234,7 +233,7 @@ endif
 all:
 	@$(ECHO) [$(APP_NAME) build complete]
 
-all : build_pre_process libs app build_post_process 
+all : build_pre_process libs app build_post_process
 
 
 #------------------------------------------------------------------------------
@@ -260,25 +259,25 @@ ABS_BSP_ROOT_DIR := $(call adjust-path-mixed,$(shell cd "$(BSP_ROOT_DIR)"; pwd))
 BSP_INCLUDE_FILE := $(BSP_ROOT_DIR)/public.mk
 ALT_LIBRARY_ROOT_DIR := $(BSP_ROOT_DIR)
 include $(BSP_INCLUDE_FILE)
-# C2H will need this to touch the BSP public.mk and avoid the sopc file 
+# C2H will need this to touch the BSP public.mk and avoid the sopc file
 # out-of-date error during a BSP make
 ABS_BSP_INCLUDE_FILE := $(ABS_BSP_ROOT_DIR)/public.mk
 
 
 ifneq ($(WARNING.SMALL_STACK_SIZE),)
 # This WARNING is here to protect you from unknowingly using a very small stack
-# If the warning is set, increase your stack size or enable the BSP small stack 
+# If the warning is set, increase your stack size or enable the BSP small stack
 # setting to eliminate the warning
 $(warning WARNING: $(WARNING.SMALL_STACK_SIZE))
 endif
 
-# If the BSP public.mk indicates that ALT_SIM_OPTIMIZE is set, rename the ELF 
-# by prefixing it with RUN_ON_HDL_SIMULATOR_ONLY_.  
+# If the BSP public.mk indicates that ALT_SIM_OPTIMIZE is set, rename the ELF
+# by prefixing it with RUN_ON_HDL_SIMULATOR_ONLY_.
 ifneq ($(filter -DALT_SIM_OPTIMIZE,$(ALT_CPPFLAGS)),)
 ELF := RUN_ON_HDL_SIMULATOR_ONLY_$(ELF)
 endif
 
-# If the BSP public.mk indicates that ALT_PROVIDE_GMON is set, add option to 
+# If the BSP public.mk indicates that ALT_PROVIDE_GMON is set, add option to
 # download_elf target
 ifneq ($(filter -DALT_PROVIDE_GMON,$(ALT_CPPFLAGS)),)
 GMON_OUT_FILENAME := gmon.out
@@ -412,22 +411,22 @@ ifeq ($(CREATE_LINKER_MAP), 1)
 APP_LDFLAGS += -Wl,-Map=$(LINKER_MAP_NAME)
 endif
 
-# QUARTUS_PROJECT_DIR and SOPC_NAME need to be defined if you want the 
-# mem_init_install target of the mem_init.mk (located in the associated BSP) 
-# to know how to copy memory initialization files (e.g. .dat, .hex) into 
+# QUARTUS_PROJECT_DIR and SOPC_NAME need to be defined if you want the
+# mem_init_install target of the mem_init.mk (located in the associated BSP)
+# to know how to copy memory initialization files (e.g. .dat, .hex) into
 # directories required for Quartus compilation or RTL simulation.
 
-# Defining QUARTUS_PROJECT_DIR causes mem_init_install to copy memory 
-# initialization files into your Quartus project directory. This is required 
-# to provide the initial memory contents of FPGA memories that can be 
-# initialized by the programming file (.sof) or Hardcopy ROMs. It is also used 
+# Defining QUARTUS_PROJECT_DIR causes mem_init_install to copy memory
+# initialization files into your Quartus project directory. This is required
+# to provide the initial memory contents of FPGA memories that can be
+# initialized by the programming file (.sof) or Hardcopy ROMs. It is also used
 # for VHDL simulation of on-chip memories.
 
-# Defining SOPC_NAME causes the mem_init_install target to copy memory 
-# initialization files into your RTL simulation directory.  This is required 
-# to provide the initial memory contents of all memories that can be 
-# initialized by RTL simulation. This variable should be set to the same name 
-# as your SOPC Builder system name. For example, if you have a system called 
+# Defining SOPC_NAME causes the mem_init_install target to copy memory
+# initialization files into your RTL simulation directory.  This is required
+# to provide the initial memory contents of all memories that can be
+# initialized by RTL simulation. This variable should be set to the same name
+# as your SOPC Builder system name. For example, if you have a system called
 # "foo.sopc", this variable should be set to "foo".
 
 # If SOPC_NAME is not set and QUARTUS_PROJECT_DIR is set, then derive SOPC_NAME.
@@ -437,23 +436,23 @@ SOPC_NAME := $(basename $(notdir $(wildcard $(QUARTUS_PROJECT_DIR)/*.sopcinfo)))
 endif
 endif
 
-# Defining JDI_FILE is required to specify the JTAG Debug Information File 
-# path. This file is generated by Quartus, and is needed along with the 
-# .sopcinfo file to resolve processor instance ID's from names in a multi-CPU 
-# systems. For multi-CPU systems, the processor instance ID is used to select 
+# Defining JDI_FILE is required to specify the JTAG Debug Information File
+# path. This file is generated by Quartus, and is needed along with the
+# .sopcinfo file to resolve processor instance ID's from names in a multi-CPU
+# systems. For multi-CPU systems, the processor instance ID is used to select
 # from multiple CPU's during ELF download.
 
-# Both JDI_FILE and SOPCINFO_FILE are provided by the BSP if they found during 
-# BSP creation. If JDI_FILE is not set and QUARTUS_PROJECT_DIR is set, then 
-# derive JDI_FILE. We do not attempt to derive SOPCINFO_FILE since there may be 
-# multiple .sopcinfo files in a Quartus project. 
+# Both JDI_FILE and SOPCINFO_FILE are provided by the BSP if they found during
+# BSP creation. If JDI_FILE is not set and QUARTUS_PROJECT_DIR is set, then
+# derive JDI_FILE. We do not attempt to derive SOPCINFO_FILE since there may be
+# multiple .sopcinfo files in a Quartus project.
 ifeq ($(JDI_FILE),)
 ifneq ($(QUARTUS_PROJECT_DIR),)
 JDI_FILE := $(firstword $(wildcard $(QUARTUS_PROJECT_DIR)/output_files/*.jdi) $(wildcard $(QUARTUS_PROJECT_DIR)/*.jdi))
 endif
 endif
 
-# Path to root runtime directory used for hdl simulation 
+# Path to root runtime directory used for hdl simulation
 RUNTIME_ROOT_DIR := $(CONFIG_OBJ_DIR)/runtime
 
 
@@ -501,7 +500,7 @@ SDIR_OBJ_LIST := $(sort $(SDIR_OBJ_LIST_C) $(SDIR_OBJ_LIST_CPP) \
 
 # Relative-pathed objects that being with "../" are handled differently.
 #
-# Regular objects are created as 
+# Regular objects are created as
 #   $(CONFIG_OBJ_DIR)/<path>/<filename>.o
 # where the path structure is maintained under the obj directory.  This
 # applies for both absolute and relative paths; in the absolute path
@@ -509,16 +508,16 @@ SDIR_OBJ_LIST := $(sort $(SDIR_OBJ_LIST_C) $(SDIR_OBJ_LIST_CPP) \
 # directory.  This is done to allow two source files with the same name
 # to be included as part of the project.
 #
-# Note: On Cygwin, the path recreated under the obj directory will be 
+# Note: On Cygwin, the path recreated under the obj directory will be
 # the cygpath -u output path.
 #
-# Relative-path objects that begin with "../" cause problems under this 
+# Relative-path objects that begin with "../" cause problems under this
 # scheme, as $(CONFIG_OBJ_DIR)/../<rest of path>/ can potentially put the object
 # files anywhere in the system, creating clutter and polluting the source tree.
-# As such, their paths are flattened - the object file created will be 
-# $(CONFIG_OBJ_DIR)/<filename>.o.  Due to this, two files specified with 
-# "../" in the beginning cannot have the same name in the project.  VPATH 
-# will be set for these sources to allow make to relocate the source file 
+# As such, their paths are flattened - the object file created will be
+# $(CONFIG_OBJ_DIR)/<filename>.o.  Due to this, two files specified with
+# "../" in the beginning cannot have the same name in the project.  VPATH
+# will be set for these sources to allow make to relocate the source file
 # via %.o rules.
 #
 # The following lines separate the object list into the flatten and regular
@@ -606,7 +605,7 @@ ifneq ($(wildcard $(SOPCINFO_FILE)),)
 ELF_PATCH_FLAG += --sopcinfo $(SOPCINFO_FILE)
 endif
 
-# Use the DOWNLOAD_CABLE variable to specify which JTAG cable to use. 
+# Use the DOWNLOAD_CABLE variable to specify which JTAG cable to use.
 # This is not needed if you only have one cable.
 ifneq ($(DOWNLOAD_CABLE),)
 DOWNLOAD_CABLE_FLAG := --cable '$(DOWNLOAD_CABLE)'
@@ -768,7 +767,7 @@ $(AS) -MP -MMD -c $(APP_CPPFLAGS) $(APP_CFLAGS) $(APP_ASFLAGS) -o $@ $<
 $(AS_POST_PROCESS)
 endef
 
-ifeq ($(MAKE_VERSION),3.81) 
+ifeq ($(MAKE_VERSION),3.81)
 .SECONDEXPANSION:
 
 $(APP_OBJS_C): $(CONFIG_OBJ_DIR)/%.o: $$(call adjust-path-mixed,%.c)
