--- a/board/de10-nano/DE10-Nano-vd_isl.qsf
+++ b/board/de10-nano/DE10-Nano-vd_isl.qsf
@@ -714,4 +714,7 @@ set_global_assignment -name VERILOG_FILE ../../rtl_common/ic_frontends/isl51002/
 set_global_assignment -name SDC_FILE "DE10-Nano-vd_isl.sdc"
 set_global_assignment -name CDF_FILE "DE10-Nano-vd_isl.cdf"
 set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
+set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
+set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
+set_global_assignment -name GENERATE_RBF_FILE ON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
