--- a/board/c5g/C5G-vd_isl.qsf
+++ b/board/c5g/C5G-vd_isl.qsf
@@ -970,4 +970,8 @@ set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
 
 
 
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO[5]
+set_instance_assignment -name SLEW_RATE 0 -to GPIO[5]
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO[4]
+set_instance_assignment -name SLEW_RATE 0 -to GPIO[4]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
