--- a/board/de10-nano/DE10-Nano-vd_isl.qsf
+++ b/board/de10-nano/DE10-Nano-vd_isl.qsf
@@ -747,4 +747,8 @@ set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
 set_global_assignment -name GENERATE_RBF_FILE ON
 
 
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0[4]
+set_instance_assignment -name SLEW_RATE 0 -to GPIO_0[4]
+set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0[5]
+set_instance_assignment -name SLEW_RATE 0 -to GPIO_0[5]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
