--- a/board/de10-nano/DE10-Nano-vd_isl.qsf
+++ b/board/de10-nano/DE10-Nano-vd_isl.qsf
@@ -732,6 +732,7 @@ set_global_assignment -name QIP_FILE ../../rtl_common/char_array.qip
 set_global_assignment -name QIP_FILE ../../rtl_common/char_rom.qip
 set_global_assignment -name QIP_FILE ../../rtl_common/dc_fifo_out.qip
 set_global_assignment -name QIP_FILE ../../rtl_common/dc_fifo_in.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/lpm_mult_sl.qip
 set_global_assignment -name QIP_FILE software/sys_controller/mem_init/meminit.qip
 set_global_assignment -name QIP_FILE rtl/pll.qip
 set_global_assignment -name SIP_FILE rtl/pll.sip
@@ -751,4 +752,5 @@ set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0[4]
 set_instance_assignment -name SLEW_RATE 0 -to GPIO_0[4]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0[5]
 set_instance_assignment -name SLEW_RATE 0 -to GPIO_0[5]
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
