--- a/board/de10-nano/DE10-Nano-vd_isl.qsf
+++ b/board/de10-nano/DE10-Nano-vd_isl.qsf
@@ -42,7 +42,7 @@ set_global_assignment -name DEVICE 5CSEBA6U23I7
 set_global_assignment -name TOP_LEVEL_ENTITY DE10_Nano_vd_isl
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.0.2
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "11:08:14  OCTOBER 14, 2016"
-set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "21.1.0 Lite Edition"
 set_global_assignment -name CYCLONEII_RESERVE_NCEO_AFTER_CONFIGURATION "USE AS REGULAR IO"
 set_location_assignment PIN_U9 -to ADC_CONVST
 set_location_assignment PIN_V10 -to ADC_SCK
@@ -726,23 +726,6 @@ set_global_assignment -name USE_DLL_FREQUENCY_FOR_DQS_DELAY_CHAIN ON
 set_global_assignment -name UNIPHY_SEQUENCER_DQS_CONFIG_ENABLE ON
 set_global_assignment -name OPTIMIZE_MULTI_CORNER_TIMING ON
 set_global_assignment -name ECO_REGENERATE_REPORT ON
-set_global_assignment -name QIP_FILE sys/synthesis/sys.qip
-set_global_assignment -name QIP_FILE ../../rtl_common/linebuf.qip
-set_global_assignment -name QIP_FILE ../../rtl_common/char_array.qip
-set_global_assignment -name QIP_FILE ../../rtl_common/char_rom.qip
-set_global_assignment -name QIP_FILE ../../rtl_common/dc_fifo_out.qip
-set_global_assignment -name QIP_FILE ../../rtl_common/dc_fifo_in.qip
-set_global_assignment -name QIP_FILE ../../rtl_common/lpm_mult_sl.qip
-set_global_assignment -name QIP_FILE software/sys_controller/mem_init/meminit.qip
-set_global_assignment -name QIP_FILE rtl/pll.qip
-set_global_assignment -name SIP_FILE rtl/pll.sip
-set_global_assignment -name VERILOG_FILE "rtl/DE10-Nano-vd_isl.v"
-set_global_assignment -name VERILOG_FILE ../../rtl_common/scanconverter.v
-set_global_assignment -name VERILOG_FILE ../../rtl_common/ir_rcv.v
-set_global_assignment -name VERILOG_FILE ../../rtl_common/ic_frontends/isl51002/isl51002_frontend.v
-set_global_assignment -name SDC_FILE "DE10-Nano-vd_isl.sdc"
-set_global_assignment -name CDF_FILE "DE10-Nano-vd_isl.cdf"
-set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
 set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
 set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
 set_global_assignment -name GENERATE_RBF_FILE ON
@@ -753,4 +736,25 @@ set_instance_assignment -name SLEW_RATE 0 -to GPIO_0[4]
 set_instance_assignment -name CURRENT_STRENGTH_NEW 4MA -to GPIO_0[5]
 set_instance_assignment -name SLEW_RATE 0 -to GPIO_0[5]
 
+set_global_assignment -name QIP_FILE sys/synthesis/sys.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/linebuf.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/char_array.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/char_rom.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/dc_fifo_out.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/dc_fifo_in.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/dc_fifo_emif_wr.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/lpm_mult_sl.qip
+set_global_assignment -name QIP_FILE ../../rtl_common/linebuf_double.qip
+set_global_assignment -name QIP_FILE software/sys_controller/mem_init/meminit.qip
+set_global_assignment -name QIP_FILE rtl/pll.qip
+set_global_assignment -name SIP_FILE rtl/pll.sip
+set_global_assignment -name VERILOG_FILE "rtl/DE10-Nano-vd_isl.v"
+set_global_assignment -name VERILOG_FILE ../../rtl_common/linebuf_top.v
+set_global_assignment -name VERILOG_FILE ../../rtl_common/scanconverter.v
+set_global_assignment -name VERILOG_FILE ../../rtl_common/ir_rcv.v
+set_global_assignment -name VERILOG_FILE ../../rtl_common/ic_frontends/isl51002/isl51002_frontend.v
+set_global_assignment -name SDC_FILE "DE10-Nano-vd_isl.sdc"
+set_global_assignment -name CDF_FILE "DE10-Nano-vd_isl.cdf"
+set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
+set_global_assignment -name SEED 2
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
